# potato-achis

./: .gitignore  .pre-commit-config.yaml  .rsyncignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  syncwithsv.sh
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: potato.yaml
configs/model/: baseline.yaml  mdfan.yaml
data/: .gitkeep
docs/: release_to_main.md  roadmap.md
docs/adr/: 0000-use-madr-for-decisions.md  0001-stage2-classifier-alignment.md
logs/: .gitkeep
notebooks/: .gitkeep  01_exploration.ipynb
notes/: command-log.md
outputs/: .gitkeep
outputs/baseline_mobilenet_v3_small_20260122_002857/: history.pt
outputs/baseline_mobilenet_v3_small_20260122_003152/: history.pt
scripts/: .gitkeep  evaluate.sh  setup.sh  train_baseline.sh  train_mdfan.sh
src/: __init__.py  eval.py  export_onnx.py  predict.py  train.py
src/data/: __init__.py  datamodule.py
src/data/datasets/: __init__.py  base_dataset.py  multi_source_dataset.py  potato_dataset.py
src/data/transforms/: __init__.py  andean_transforms.py  augmentations.py
src/losses/: __init__.py  domain_adversarial_loss.py  mmd_loss.py
src/models/: __init__.py  model.py
src/models/backbones/: __init__.py  backbone_factory.py  mobilenet.py  resnet.py
src/models/components/: __init__.py  gradient_reversal.py
src/models/heads/: __init__.py  classifier_head.py
src/models/mdfan/: __init__.py  classifier_alignment.py  domain_discriminator.py  feature_extractor.py  mdfan_model.py
src/utils/: __init__.py  metrics.py  ood_detection.py  visualization.py
tests/: __init__.py  test_checkpoint_metadata.py  test_classifier_alignment.py  test_data_pipeline.py  test_eval_checkpoint_inference.py  test_export_onnx.py  test_gradient_reversal.py  test_mdfan_alignment_integration.py  test_mmd_loss.py  test_model_factory.py  test_predict_utils.py  test_transforms.py
